--- a/index.html
+++ b/index.html
@@ -33,9 +33,110 @@
 
  <table>
      </tr>
+ <table class="anacade_cafe">
+    <tr>
+        <th>Produits</th>
+        <th>Marques</th>
+        <th>Prix</th> 
+        <th>kilogramme</th>
+
+    </tr>
+    <tr>
+        <td>Anacardes</td>
+        <td>Franc CFA</td>
+        <td>500fr</td>
+        <td>1kg</td>
+   </tr>
+       
    
- </table>
-<body>
+   <tr>
+       <td>Café</td>
+       <td>Franc CFA</td>
+       <td>100fr</td>
+       <td>1Kg</td>
+   </tr>
+   <tr>
+       <td>Anacardes</td>
+       <td>Franc CFA</td>
+       <td>500fr</td>
+       <td>1kg</td>
+  </tr>
+   
+  <tr>
+   <td>Café</td>
+   <td>Franc CFA</td>
+   <td>100fr</td>
+   <td>1Kg</td>
+  </tr>
+
+  <tr>
+   <td>Anacades</td>
+   <td>Franc CFA</td>
+   <td>500fr</td>
+   <td>1kg</td>
+</tr>
+
+<tr>
+   <td>Café</td>
+   <td>Franc CFA</td>
+   <td>100fr</td>
+   <td>1Kg</td>
+</tr>
+
+<tr>
+   <td>Anacardes</td>
+   <td>Franc CFA</td>
+   <td>500fr</td>
+   <td>1kg</td>
+</tr>
+<tr>
+   <td>Café</td>
+   <td>Franc CFA</td>
+   <td>100fr</td>
+   <td>1Kg</td>
+</tr>
+
+<tr>
+   <td>Anacardes</td>
+   <td>Franc CFA</td>
+   <td>500fr</td>
+   <td>1kg</td>
+</tr>
+<tr>
+   <td>Café</td>
+   <td>Franc CFA</td>
+   <td>100fr</td>
+   <td>1Kg</td>
+</tr>
+
+<tr>
+   <td>Anacardes</td>
+   <td>Franc CFA</td>
+   <td>500fr</td>
+   <td>1kg</td>
+</tr>
+<tr>
+   <td>Café</td>
+   <td>Franc CFA</td>
+   <td>100fr</td>
+   <td>1Kg</td>
+</tr>
+
+<tr>
+   <td>Anacardes</td>
+   <td>Franc CFA</td>
+   <td>500fr</td>
+   <td>1kg</td>
+</tr>
+<tr>
+   <td>Café</td>
+   <td>Franc CFA</td>
+   <td>100fr</td>
+   <td>1Kg</td>
+</tr>
+   
+ </table>  
+
     
 </body>
 </html>
