--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
             <option value="Mali"> Mali</option>
             <option value="sénegal"> sénegal</option>
             <option value="Australia"> Australia</option>
-            <option value="Ivoire cost"> Ivoire cost</option>
-            <option value="Belgigue"> Belgigue</option>
-            <option value="Malawi"> Malawi</option>
+            <option value="Ivoire cost"> cote d'ivoire </option>
+            <option value="Belgigue"> Belgigue </option>
+            <option value="Malawi"> Malawi </option>
             
         </select>
         <input type="checkbox" name="" id="check">
-        <label for="check"> Renember me </label>
+        <label for="check"> Renember me </label>  
          <input type="submit" value="submit">
      </form>
  </div>
 
- <table>
-     </tr>
  <table class="anacade_cafe">
     <tr>
         <th>Produits</th>
@@ -135,7 +133,7 @@
    <td>1Kg</td>
 </tr>
    
- </table>  
+  </table>  
 
     
 </body>
