--- a/index.html
+++ b/index.html
@@ -133,8 +133,11 @@
    <td>1Kg</td>
 </tr>
    
-  </table>  
-
-    
+  </table> 
+  <p class="border">
+     <ul >
+   </ul>
+   <li ><a href="pratique1.html" alt" cliquez ici !" > Visitez Ma Page Nommée Pratique1!</a> </li>
+  </p>  
 </body>
 </html>
