--- a/number2.html
+++ b/number2.html
@@ -8,7 +8,7 @@
 	          <title> class </title>
           </head>
 <body>
-	<h1 style="background:linear-gradient(orange, white);" > bien venu sur le number2 </h1>
+	<h1 style="background:linear-gradient(orange, white);" > Bienvenue Sur Le Number2 </h1>
 
 	<p>
 		<img src="images/vigne.png" alt="la photo de vigne" />
