--- a/pratique1.html
+++ b/pratique1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="site1.css">
 </head>
 <body>
-<div >
+
     <header>
         <h2> Dev_Source </h2>
         <ul>
@@ -23,6 +23,14 @@
    
         </ul>
     </header>
-</div>
+
+
+ <section>
+
+    <div class="pot1"> <a href="images/home_color.png"> <img src="images/home_color.png" alt="home photo" /> </a></div>
+
+    <div class="pot2"> <a href="imas/ search_orange.png"> <img src="images/search_orange.png" alt=" la photo"> </a></div>
+    <div class="pot3"><a href="images/dev-profil.PNG"> <img src=" images/dev-profil.PNG" alt="photo dev-profil" title="cliquez pour afficher la taille reel"></a></div>
+  </section>
 </body>
-</html>
+</html> 
