--- a/pratique1.html
+++ b/pratique1.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="site1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+
+    <title>Document</title>
+
 </head>
 <body>
 
@@ -26,7 +29,7 @@
     <div class="vide"></div>
 
     <div class="port"> PORTEFEUILLE <br> <br>
-                 ____&#9733;____</div>
+      <P class="etoile"> &#8212;&#9733;&#8212;</P></div>
 
  <section>
 
@@ -49,10 +52,10 @@
       AUTOUR DU WEB
      </h3>
      <ul  class="socio">
-       <li> <a href="" class="fb"> fb </a> </li>
-       <li> <a href="" class="in"> in </a></li>
-       <li> <a href="" class="tw"> tw </a></li>
-       <li> <a href="" class="wh"> wh</a> </li>
+       <li> <a href="" class="fb"> <i class=" fa fa-facebook"></i> </a> </li>
+       <li> <a href="" class="in"> <i class=" fa fa-linkedin"></i> </a></li>
+       <li> <a href="" class="tw"> <i class="fa fa-twitter"></i> </a></li>
+       <li> <a href="" class="wh"> <i class="fa fa-whatsapp"></i></a> </li>
      </ul>
    </div>
 
@@ -60,9 +63,14 @@
      <h3>PLAN DU SITE</h3>
      <ul class="ppac">
        <li>Portefeuille <br> prestation <br> about <br> contact
+        
+        
        </li>
      </ul>
    </div>
+
+   <i class="glyphicon glyphicon-user"></i>
+
   </footer>
 
 </body>
