--- a/pratique1.html
+++ b/pratique1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="site1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-
+    <link rel="icon" href="images/terre.jpg">
     <title>Document</title>
 
 </head>
@@ -31,13 +31,70 @@
     <div class="port"> PORTEFEUILLE <br> <br>
       <P class="etoile"> &#8212;&#9733;&#8212;</P></div>
 
- <section>
+ <section class="sect">
 
-    <div class="pot1"> <a href="images/home_color.png">  <img src="images/home_color.png" alt="home photo" class="image1" /> </a></div>
+    <div class="pot1"> <a href="images/home_color.png">  <img src="images/home_color.png" alt="home photo" class="image1" title="cliquez pour afficher la taille reèl!" /> </a></div>
 
-    <div class="pot2"> <a href="imas/ search_orange.png"> <img src="images/search_orange.png" alt=" la photo"> </a></div>
+    <div class="pot2"> <a href="images/ search_orange.png"> <img src="images/search_orange.png" alt=" la photo" title="cliquez pour afficher la taille reèl!"> </a></div>
     <div class="pot3"><a href="images/dev-profil.PNG"> <img src=" images/dev-profil.PNG" alt="photo dev-profil" title="cliquez pour afficher la taille reel"></a></div>
   </section>
+  <ul class="grande-carte">
+    <li class="carte">
+      <img src="images/poulet.jpg" alt="">
+      <h4> Projet de recherche</h4>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/foufou.jpg" alt=" la photo de recherche">
+      <h4> Projet de recherche</h4>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/chaussure.jpg" alt="">
+      <h4> Projet de recherche</h4>
+     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/poulet.jpg" alt="">
+      <h4> Projet de recherche</h4>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/poulet.jpg" alt="">
+      <h4> Projet de recherche</h4>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/foufou.jpg" alt=" la photo de recherche">
+      <h4> Projet de recherche</h4>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/chaussure.jpg" alt="">
+      <h4> Projet de recherche</h4>
+     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/poulet.jpg" alt="">
+      <h4> Projet de recherche</h4>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/poulet.jpg" alt="">
+      <h4> Projet de recherche</h4>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/foufou.jpg" alt=" la photo de recherche">
+      <h4> Projet de recherche</h4>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+    <li class="carte">
+      <img src="images/chaussure.jpg" alt="">
+      <h4> Projet de recherche</h4>
+     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officiis id, illum tempora mollitia aliquid, saepe eligendi autem modi neque laboriosam fugiat praesentium.</p>
+    </li>
+  </ul>
 
   <footer>
    <div class="pass1">
